<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/questionNumber"/>

    <TextView
        android:id="@+id/question"
        android:layout_margin="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Question1"
        android:layout_gravity="center"
        android:textSize="30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/answer1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/Answer1"
            android:layout_weight="1"
            android:onClick="checkAnswer"/>

        <Button
            android:id="@+id/answer2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/Answer2"
            android:layout_weight="1"
            android:onClick="checkAnswer"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/answer3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/Answer3"
            android:layout_weight="1"
            android:onClick="checkAnswer"/>

        <Button
            android:id="@+id/answer4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/Answer4"
            android:layout_weight="1"
            android:onClick="checkAnswer"/>
    </LinearLayout>

</LinearLayout>
