<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:text="@string/Question1"
        android:textSize="30dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/answer1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/light"
            android:layout_margin="5dp"
            android:background="@drawable/gradient"
            android:text="@string/Answer1" />

        <Button
            android:id="@+id/answer2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:textColor="@color/light"
            android:background="@drawable/gradient"
            android:text="@string/Answer2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/answer3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:textColor="@color/light"
            android:background="@drawable/gradient"
            android:text="@string/Answer3" />

        <Button
            android:id="@+id/answer4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:textColor="@color/light"
            android:background="@drawable/gradient"
            android:text="@string/Answer4" />
    </LinearLayout>

    <Button
        android:id="@+id/nextQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:onClick="showNextQuestion"
        android:text="Show next question"
        android:textColor="@color/light"
        android:layout_gravity="center"
        android:padding="10dp"
        android:background="@drawable/gradient"
        android:layout_marginTop="20dp"/>
</LinearLayout>
